added HTML code, and CSS Styling, not final assignment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -32,6 +33,31 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+
+     <!-- START HERE -->
+     <div class="page_content">
+        <h2>Adrian Stephen Burke Jr.</h2>
+        <h3>IT Support Specialist</h3>
+        <hr>
+        <p>My <em>favorite</em> thing about programming is problem-solving, and the satisfaction of creating something in the digital realm.</p>
+        <img class="my_picture" src="https://assets-prd.ignimgs.com/2022/02/10/mario-kart-dlc-1644519493599.jpeg?width=1280" alt="Mario Racing Luigi">
+        <p>I'm baby knausgaard waistcoat bushwick chambray mustache copper mug. Dreamcatcher sus selfies shaman live-edge disrupt viral pickled typewriter shoreditch franzen fit put a bird on it locavore la croix. Cred leggings salvia, actually pug taiyaki fixie green juice shaman thundercats. Kinfolk gochujang bruh vinyl, XOXO coloring book air plant tofu swag heirloom PBR&B keffiyeh. Synth bushwick copper mug vinyl brunch. Synth actually Brooklyn keffiyeh gluten-free woke, deep v neutra literally pour-over flannel slow-carb.
+
+          Humblebrag poutine woke four dollar toast pinterest schlitz kinfolk single-origin coffee. Lomo aesthetic blog farm-to-table chartreuse photo booth. Lumbersexual irony subway tile, venmo squid literally fam microdosing shoreditch williamsburg. Green juice jianbing 90's la croix enamel pin cray. Copper mug sartorial echo park messenger bag scenester chartreuse. Hexagon intelligentsia art party typewriter.
+          
+          Dummy text? More like dummy thicc text, amirite?</p>
+        <h4>My Projects</h4>
+        <ul>
+          <li>Project 1</li>
+          <li>Project 2</li>
+          <li>Project 3</li>
+        </ul>
+        <h4>Contact Me</h4>
+        <p><b>444-444-4444</b></p>
+        <a href="mailto:fake@gmail.com"><b>fake@gmail.com</b></a>
+        
+
+     </div>
 </body>
 
 </html>
