--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css">
+   
 </head>
 
 <body>
@@ -36,7 +37,8 @@
 
      <!-- START HERE -->
      <div class="page_content">
-        <h2>Adrian Stephen Burke Jr.</h2>
+    <section>
+      <h2>Adrian Stephen Burke Jr.</h2>
         <h3>IT Support Specialist</h3>
         <hr>
         <p>My <em>favorite</em> thing about programming is problem-solving, and the satisfaction of creating something in the digital realm.</p>
@@ -46,16 +48,23 @@
           Humblebrag poutine woke four dollar toast pinterest schlitz kinfolk single-origin coffee. Lomo aesthetic blog farm-to-table chartreuse photo booth. Lumbersexual irony subway tile, venmo squid literally fam microdosing shoreditch williamsburg. Green juice jianbing 90's la croix enamel pin cray. Copper mug sartorial echo park messenger bag scenester chartreuse. Hexagon intelligentsia art party typewriter.
           
           Dummy text? More like dummy thicc text, amirite?</p>
+    </section>
+    <hr>
+    <div class="projects">
         <h4>My Projects</h4>
         <ul>
           <li>Project 1</li>
           <li>Project 2</li>
           <li>Project 3</li>
         </ul>
+    </section>
+    <hr>
+    </div>
+    <footer>
         <h4>Contact Me</h4>
         <p><b>444-444-4444</b></p>
         <a href="mailto:fake@gmail.com"><b>fake@gmail.com</b></a>
-        
+    </footer>
 
      </div>
 </body>
